Move to bootstrap and use a cover page

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,3 @@
 <div class="footer">
-    <div class="pure-menu pure-menu-horizontal pure-menu-open">
-        <ul>
-            <li>&copy; 2014 Jan Alonzo. All rights reserved.</li>
-        </ul>
-    </div>
+  <p>&copy; 2014 Jan Alonzo. All rights reserved.</p>
 </div>
