--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,51 +1,52 @@
 {{ partial "header.html" . }}
 
-<div id="layout" class="pure-g">
-    {{ partial "sidebar.html" . }}
-
-    <div class="content pure-u-1 pure-u-md-3-4">
-        <div class="pure-u-1 pure-u-md-1-2">
-            <!-- A wrapper for all content -->
-            {{ range .Data.Pages }}{{ if ne .Section "page" }}
-            <!-- wrapper for photos -->
-            {{ if eq .Section "photos" }}
-            <section class="photo">
-              <h1 class="content-subhead">{{ .Date.Format "02 Jan 2006, 15:04" }}</h1>
-              <div class="post-description">
-                <article class="caption">
-                  {{ .Content }}
-                  <div class="caption__overlay">
-                    <h2 class="caption__overlay__title"><a class="photo-title" href="{{ .Permalink }}">{{ .Title }}</a></h2>
-                    <p class="caption__overlay__content">
-                      {{ if isset .Params "categories" }}
-                      {{ range .Params.categories }}<a class="post-category post-category-{{ . }}" href="/categories/{{ . | urlize }}.html">#{{ . }}</a>{{ end }}{{ end }}
-                    </p>
-                  </div>
-                </article>
-              </div>
-            </section>
-            {{ else }} <!-- wrapper for blog posts -->
-            <section class="post">
-              <h1 class="content-subhead">{{ .Date.Format "02 Jan 2006, 15:04" }}</h1>
-              <header class="post-header">
-                <a href="{{ .Permalink }}" class="post-title">{{ .Title }}</a>
-              </header>
-              <div class="post-description">
-                {{ .Content }}
-              </div>
-              <p class="post-meta">
-                {{ with .Params.author }}
-                By <strong class="post-author">{{ . }}</strong>
-                {{ end }}
-                {{ if isset .Params "categories" }}
-                {{ range .Params.categories }}<a class="post-category post-category-{{ . }}" href="/categories/{{ . | urlize }}.html">#{{ . }}</a>{{ end }}
-                {{ end }}
-              </p>
-            </section>
-            {{ end }}
-            {{ end }}{{ end }}
-            {{ partial "footer.html" . }}
+<div class="site-wrapper">
+  <div class="site-wrapper-inner">
+    <div class="cover-container">
+      <div class="masthead clearfix">
+        <div class="inner">
+          <h3 class="masthead-brand">Jan Alonzo</h3>
+          <ul class="nav masthead-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <!--<li><a href="#">Blog</a></li>-->
+            <li><a href="/photos.html">Photography</a></li>
+            <li><a href="mailto:jmalonzo@gmail.com">Contact</a></li>
+          </ul>
         </div>
+      </div>
+
+      <div class="inner cover">
+        <div class="profile-photo"></div>
+        <h1 class="cover-heading">{{ .Title }}</h1>
+        <p class="lead">
+          {{ with .Site.Params.Description}}{{.}}  {{ else }}A theme based on the pure css blog layout.{{end}}
+        </p>
+        <div class="lead btn-group">
+          <a class="btn-social btn btn-default" href="https://twitter.com/{{ .Site.Params.twitter }}" class="pure-button">
+            <i class="fa fa-2x fa-twitter"></i>
+          </a>
+          <a class="btn-social btn btn-default" href="https://github.com/{{.Site.Params.github }}" class="pure-button">
+            <i class="fa fa-2x fa-github"></i>
+          </a>
+          <a class="btn-social btn btn-default" href="https://google.com/{{.Site.Params.gplus }}" class="pure-button">
+            <i class="fa fa-2x fa-google-plus"></i>
+          </a>
+          <a class="btn-social btn btn-default" href="https://linkedin.com/in/{{.Site.Params.linkedin }}" class="pure-button">
+            <i class="fa fa-2x fa-linkedin"></i>
+          </a>
+          <a class="btn-social btn btn-default" href="https://facebook.com/{{.Site.Params.facebook }}">
+            <i class="fa fa-2x fa-facebook"></i>
+          </a> 
+        </div>
+      </div>
+
+      <div class="mastfoot">
+        <div class="inner">
+            <p>&copy; 2014 Jan Alonzo. All rights reserved.</p>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
+
 {{ partial "end.html" . }}
