--- a/layouts/partials/end.html
+++ b/layouts/partials/end.html
@@ -8,8 +8,9 @@
 
   ga('create', 'UA-594998-17', 'auto');
   ga('send', 'pageview');
-
 </script>
 <script src="/js/picturefill.min.js" async></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="/js/bootstrap.min.js" async></script>
 </body>
 </html>
