Increase image resolution for hi-res displays

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,7 +17,7 @@
 
       <div class="inner cover">
         <div class="profile-photo"></div>
-        <h1 class="cover-heading">{{ .Title }}</h1>
+        <h1 class="cover-heading">Evolve solutions; when you find a good one, don't stop.</h1>
         <p class="lead">
           {{ with .Site.Params.Description}}{{.}}  {{ else }}A theme based on the pure css blog layout.{{end}}
         </p>
