--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,7 +4,7 @@
 <div class="container-fluid">
   <div class="row">
     {{ range .Data.Pages }}
-    <div class="col-xs-6 col-md-4">
+    <div class="col-lg-4 col-sm-6 col-xs-12">
       <div class="thumbnail caption">
         {{ .Content }}
         <div class="caption__overlay">
