--- a/layouts/partials/end.html
+++ b/layouts/partials/end.html
@@ -10,7 +10,30 @@
   ga('send', 'pageview');
 </script>
 <script src="/js/picturefill.min.js" defer async></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" defer async></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" async></script>
 <script src="/js/bootstrap.min.js" defer async></script>
+<script>
+  // https://developers.google.com/speed/docs/insights/OptimizeCSSDelivery
+  var cb = function() {
+    var styles = [
+      "//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,300,800&subset=latin,latin-ext",
+      "/css/bootstrap.min.css",
+      "/css/bootstrap-theme.min.css",
+      "/css/font-awesome.min.css",
+      "/css/site.min.css"
+    ]
+    var h = document.getElementsByTagName('head')[0];
+    for (var i=0;i<styles.length;i++) {
+      var l = document.createElement('link'); l.rel = 'stylesheet';
+      l.href = styles[i];
+      h.appendChild(l);
+    }
+  };
+
+  var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+      webkitRequestAnimationFrame || msRequestAnimationFrame;
+  if (raf) raf(cb);
+  else window.addEventListener('load', cb);
+</script>
 </body>
 </html>
