--- a/layouts/partials/header-cover.html
+++ b/layouts/partials/header-cover.html
@@ -22,5 +22,17 @@
     ga('create', 'UA-594998-17', 'auto');
     ga('send', 'pageview');
   </script>
+  <style>
+    html, body {
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-attachment: fixed;
+      background-image: url("/assets/bg.jpg");
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+    }
+  </style>
 </head>
 <body>
