--- a/layouts/partials/end-photos-single.html
+++ b/layouts/partials/end-photos-single.html
@@ -25,5 +25,6 @@
 <script src="/js/picturefill.min.js" defer async></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="/js/bootstrap.min.js" defer async></script>
+<script src="/js/exifdata.min.js"></script>
 </body>
 </html>
