--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,5 @@
 <div class="footer">
-  <p>&copy; 2014 Jan Alonzo. All rights reserved.</p>
+  <p>
+    &copy; 2014 Jan Alonzo. All content are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+  </p>
 </div>
