--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -1,20 +1,24 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<meta name="author" content="Jan Alonzo">
-{{with .Description }}<meta name="description" content="{{ . }}">{{end}}
-<meta name="keywords" content="{{ if .Keywords }}{{ range .Keywords }}{{ . }}, {{ end }}{{else if isset .Params "categories" }}{{ range .Params.categories }}{{ . }}, {{ end }}{{end}}">
+<meta itemprop="author" name="author" content="Jan Alonzo">
+{{with .Description }}<meta itemprop="description" name="description" content="{{ . }}">{{end}}
+<meta itemprop="keywords" name="keywords" content="{{ if .Keywords }}{{ range .Keywords }}{{ . }}, {{ end }}{{else if isset .Params "categories" }}{{ range .Params.categories }}{{ . }}, {{ end }}{{end}}">
 
  <!-- open graph -->
 <meta property="og:type" content="article"/>
 <meta property="og:description" content="{{ .Description }}"/>
 <meta property="og:title" content="{{ .Title }}"/>
 <meta property="og:site_name" content="Jan Alonzo"/>
+{{ if isset .Params "thumbnail" }}
 <meta property="og:image" content="{{ .Params.thumbnail }}" />
 <meta property="og:image:type" content="image/jpeg" />
 <meta property="og:image:width" content="" />
 <meta property="og:image:height" content="" />
+{{ end }}
+{{ if .Permalink }}
 <meta property="og:url" content="{{ .Permalink }}">
+{{ end }}
 <meta property="og:locale" content="en_US">
 <meta property="article:published_time" content="{{ .Date.Format "2006-01-02" }}"/>
 <meta property="article:modified_time" content="{{ .Date.Format "2006-01-02" }}"/>
@@ -23,8 +27,8 @@
 {{if .Keywords }}
 {{ range .Keywords }}<meta property="article:tag" content="{{ . }}">
 {{ end }}
-{{else if isset .Params "tags" }}
-{{ range .Params.tags }}<meta property="article:tag" content="{{ . }}">
+{{else if isset .Params "categories" }}
+{{ range .Params.categories }}<meta property="article:tag" content="{{ . }}">
 {{ end }}
 {{end}}
 
@@ -34,7 +38,9 @@
 <meta name="twitter:site" content="@jmalonzo">
 <meta name="twitter:title" content="{{ .Title }}">
 <meta name="twitter:description" content="{{ .Description }}">
+{{ if isset .Params "thumbnail" }}
 <meta name="twitter:image" content="{{ .Params.thumbnail }}">
+{{ end }}
 <meta name="twitter:url" content="{{ .Permalink }}">
 <meta name="twitter:creator" content="@jmalonzo">
 <meta name="twitter:domain" content="janalonzo.com">
