--- a/layouts/partials/header-single.html
+++ b/layouts/partials/header-single.html
@@ -21,7 +21,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li>
           <p class="navbar-text" itemscope itemtype="http://schema.org/Photograph">
-            <span itemprop="headline"><strong>{{ .Title }}</strong></name>
+            <span><strong>{{ .Title }}</strong></name>
             &nbsp;
             <span class="btn-exif-info" data-toggle="modal" data-target="#exif-modal">
               <i class="fa fa-info-circle"></i>
