--- a/layouts/partials/content-header.html
+++ b/layouts/partials/content-header.html
@@ -1,5 +1,3 @@
-<div id="overlay"></div>
-
 <nav class="navbar navbar-inverse" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -23,7 +21,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li>
           <p class="navbar-text">
-            <span itemprop="name"><strong>{{ .Title }}</strong></name>
+            <span><strong>{{ .Title }}</strong></name>
             {{ if isset .Params "categories" }}
             &middot;
             {{ range .Params.categories }}
