--- a/layouts/partials/end-cover.html
+++ b/layouts/partials/end-cover.html
@@ -2,11 +2,7 @@
   // https://developers.google.com/speed/docs/insights/OptimizeCSSDelivery
   var cb = function() {
     var styles = [
-      "//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,300,800&subset=latin,latin-ext",
-      "/css/bootstrap.min.css",
-      "/css/bootstrap-theme.min.css",
-      "/css/font-awesome.min.css",
-      "/css/site.min.css"
+        "//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,300,800&subset=latin,latin-ext"
     ]
     var h = document.getElementsByTagName('head')[0];
     for (var i=0;i<styles.length;i++) {
