--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -1,11 +1,15 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<meta itemprop="author" name="author" content="Jan Alonzo">
+<!-- schema.org -->
+<meta itemprop="author" name="author" content="Jan Michael Alonzo">
+<meta itemprop="name" content="{{ .Title }}"/>
 {{with .Description }}<meta itemprop="description" name="description" content="{{ . }}">{{end}}
 <meta itemprop="keywords" name="keywords" content="{{ if .Keywords }}{{ range .Keywords }}{{ . }}, {{ end }}{{else if isset .Params "categories" }}{{ range .Params.categories }}{{ . }}, {{ end }}{{end}}">
+<meta itemprop="datePublished" content="{{ .Date.Format "2006-01-02" }}"/>
 
- <!-- open graph -->
+<!-- open graph -->
+<meta property="fb:app_id" content="335903683263915"/>
 <meta property="og:type" content="article"/>
 <meta property="og:description" content="{{ .Description }}"/>
 <meta property="og:title" content="{{ .Title }}"/>
@@ -17,12 +21,15 @@
 <meta property="og:image:height" content="" />
 {{ end }}
 {{ if .Permalink }}
-<meta property="og:url" content="{{ .Permalink }}">
+<meta itemprop="url" content="{{ .Permalink }}"/>
+<meta property="og:url" content="{{ .Permalink }}"/>
+{{ else }}
+<meta property="url" content="http://www.janalonzo.com"/>
+<meta property="og:url" content="http://www.janalonzo.com"/>
 {{ end }}
 <meta property="og:locale" content="en_US">
 <meta property="article:published_time" content="{{ .Date.Format "2006-01-02" }}"/>
 <meta property="article:modified_time" content="{{ .Date.Format "2006-01-02" }}"/>
-
 
 {{if .Keywords }}
 {{ range .Keywords }}<meta property="article:tag" content="{{ . }}">{{ end }}
