--- a/layouts/photos/single.html
+++ b/layouts/photos/single.html
@@ -4,7 +4,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-18 col-md-12">
-      <div itemscope itemtype="http://schema.org/Photograph">
+      <div class="image-view-single" itemscope itemtype="http://schema.org/Photograph">
         {{ .Content }}
       </div>
 
