--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -195,6 +195,12 @@ body {
    background-repeat: none;
 }
 
+.image-view-single img {
+   max-height: 900px;
+   margin-left: auto;
+   margin-right: auto;
+}
+
 /** Hover Effects */
 .caption {
    position: relative;
