--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -19,6 +19,7 @@
 <meta property="og:image:type" content="image/jpeg" />
 <meta property="og:image:width" content="" />
 <meta property="og:image:height" content="" />
+<meta itemprop="image" content="{{ .Params.thumbnail }}"/>
 {{ end }}
 {{ if .Permalink }}
 <meta itemprop="url" content="{{ .Permalink }}"/>
