--- a/layouts/shortcodes/img.html
+++ b/layouts/shortcodes/img.html
@@ -1,5 +1,5 @@
 <!-- image -->
-<img class="img-responsive caption__media" itemprop="image"
+<img class="img-responsive caption__media"
      sizes="(max-width: 30em) 100%, (max-width: 50em) 50%, calc(33% - 100px)"
      {{ with .Get "srcname" }} srcset="{{.}}.jpg 2560w, {{.}}-large.jpg 2048w, {{.}}-medium.jpg 1024w, {{.}}-small.jpg 640w, {{.}}-xsmall.jpg 320w" src="{{.}}-small.jpg"
      {{ end }} {{with .Get "title"}}alt="{{.}}"{{end}}/>
