--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -27,7 +27,7 @@ a:hover {
 html,
 body {
    height: 100%;
-   background-color: #222;
+   background-color: #000;
 }
 
 body {
@@ -174,6 +174,7 @@ body {
 }
 
 .footer p {
+   color: #999;
    opacity: 0.8;
    font-size: 0.8em;
 }
