--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,7 +17,7 @@
       </div>
 
       <div class="inner cover">
-        <img src="/assets/profile.png" class="img-circle profile-photo"/>
+        <img src="https://www.janalonzo.com/assets/profile.png" class="img-circle profile-photo"/>
         <h1 class="cover-heading">Evolve solutions; when you find a good one, don't stop.</h1>
         <p class="lead">
           {{ with .Site.Params.Description}}{{.}}  {{ else }}A theme based on the pure css blog layout.{{end}}
