--- a/layouts/partials/end-cover.html
+++ b/layouts/partials/end-cover.html
@@ -19,6 +19,6 @@
 
 </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="/js/bootstrap.min.js" defer async></script>
+<script src="https://www.janalonzo.com/js/bootstrap.min.js" defer async></script>
 </body>
 </html>
