--- a/layouts/partials/end.html
+++ b/layouts/partials/end.html
@@ -18,8 +18,8 @@
   else window.addEventListener('load', cb);
 
 </script>
-<script src="/js/picturefill.min.js" defer async></script>
+<script src="https://www.janalonzo.com/js/picturefill.min.js" defer async></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="/js/bootstrap.min.js" defer async></script>
+<script src="https://www.janalonzo.com/js/bootstrap.min.js" defer async></script>
 </body>
 </html>
