--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -25,8 +25,8 @@
 <meta itemprop="url" content="{{ .Permalink }}"/>
 <meta property="og:url" content="{{ .Permalink }}"/>
 {{ else }}
-<meta property="url" content="http://www.janalonzo.com"/>
-<meta property="og:url" content="http://www.janalonzo.com"/>
+<meta property="url" content="https://www.janalonzo.com"/>
+<meta property="og:url" content="https://www.janalonzo.com"/>
 {{ end }}
 <meta property="og:locale" content="en_US">
 <meta property="article:published_time" content="{{ .Date.Format "2006-01-02" }}"/>
@@ -44,7 +44,7 @@
 <meta name="twitter:image" content="{{ .Params.thumbnail }}">
 {{ else }}
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="http://janalonzo.com/assets/profile.png">
+<meta name="twitter:image" content="https://www.janalonzo.com/assets/profile.png">
 {{ end }}
 <meta name="twitter:site" content="@jmalonzo">
 <meta name="twitter:title" content="{{ .Title }}">
