--- a/layouts/partials/end-photos-single.html
+++ b/layouts/partials/end-photos-single.html
@@ -17,11 +17,12 @@
   if (raf) raf(cb);
   else window.addEventListener('load', cb);
 
+  // FIXME separate CSS then remove this hack
   document.querySelector(".image-view-single img").classList.remove("caption__media");
 </script>
 <script src="https://www.janalonzo.com/js/picturefill.min.js" defer async></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="https://www.janalonzo.com/js/bootstrap.min.js" defer async></script>
-<script src="https://www.janalonzo.com/js/exifdata.min.js" defer async></script>
+<script src="https://www.janalonzo.com/js/site.min.js" defer async></script>
 </body>
 </html>
