--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1,138 +1,15 @@
-/** Cover.css from bootstrap's cover.css"
-/*
- * Globals
- */
-
-/* Links */
-a,
-a:focus,
-a:hover {
-  color: #fff;
-}
-
-/* Custom default button */
-.btn-default,
-.btn-default:hover,
-.btn-default:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritence from `body` */
-  background-color: #fff;
-  border: 1px solid #fff;
-}
-
-/*
- * Base structure
- */
 
 html,
 body {
-   height: 100%;
-   background-color: #000;
+  height: 100%;
+  background-color: #222;
 }
 
-body {
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
-}
-
-/* Extra markup and styles for table-esque vertical and horizontal centering */
-.site-wrapper {
-  display: table;
-  width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
-  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-}
-.site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
-}
-.cover-container {
-  margin-right: auto;
-  margin-left: auto;
-}
-
-/* Padding for spacing */
-.inner {
-  padding: 30px;
-}
-
-
-/*
- * Header
- */
-.masthead-brand {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.masthead-nav > li {
-  display: inline-block;
-}
-.masthead-nav > li + li {
-  margin-left: 20px;
-}
-.masthead-nav > li > a {
-  padding-right: 0;
-  padding-left: 0;
-  font-size: 16px;
-  font-weight: bold;
-  color: #fff; /* IE8 proofing */
-  color: rgba(255,255,255,.75);
-  border-bottom: 2px solid transparent;
-}
-.masthead-nav > li > a:hover,
-.masthead-nav > li > a:focus {
-  background-color: transparent;
-  border-bottom-color: #a9a9a9;
-  border-bottom-color: rgba(255,255,255,.25);
-}
-.masthead-nav > .active > a,
-.masthead-nav > .active > a:hover,
-.masthead-nav > .active > a:focus {
-  color: #fff;
-  border-bottom-color: #fff;
-}
-
-@media (min-width: 768px) {
-  .masthead-brand {
-    float: left;
-  }
-  .masthead-nav {
-    float: right;
-  }
-}
-
-
-/*
- * Cover
- */
-
-.cover {
-  padding: 0 20px;
-}
-.cover .btn-lg {
-  padding: 10px 20px;
-  font-weight: bold;
-}
-
-
-/*
- * Footer
- */
-
-.mastfoot {
-  color: #999; /* IE8 proofing */
-  color: rgba(255,255,255,.5);
-}
-
-/** Jan's additions, custom content */
 .profile-photo {
    width: 128px;
    height: 128px;
    border-radius: 69px;
+   border: 2px solid rgb(238, 238, 238);
    border: 2px solid rgba(238, 238, 238, 0.8);
    margin-left: auto;
    margin-right: auto;
@@ -152,7 +29,6 @@ body {
    color: #fff;
    font-size: 1.2em;
    text-transform: capitalize;
-   text-align: left;
 }
 
 .photo-date {
@@ -166,7 +42,7 @@ body {
 .post-category {
    margin: 0 0.1em;
    padding: 0.3em 0.3em;
-   color: #ccc;
+   color: #EEE;
 }
 
 .navbar-text {
@@ -206,6 +82,8 @@ body {
 .caption {
    position: relative;
    overflow: hidden;
+   -ms-transform: translateZ(0);
+   -o-transform: translateZ(0);
    -webkit-transform: translateZ(0);
    -moz-transform: translateZ(0);
    transform: translateZ(0);
@@ -225,8 +103,12 @@ body {
    bottom: 0;
    left: 0;
    padding: 10px;
-   color: white;
+   color: #eee;
+   -ms-transform: translateY(100%);
+   -o-transform: translateY(100%);
    -webkit-transform: translateY(100%);
+   -ms-transition: transform .35s ease-out;
+   -o-transition: transform .35s ease-out;
    -webkit-transition: transform .35s ease-out;
    -moz-transform: translateY(100%);
    -moz-transition: transform .35s ease-out;
@@ -234,6 +116,8 @@ body {
    transition: transform .35s ease-out;
 }
 .caption:hover .caption__overlay {
+   -o-transform: translateY(0);
+   -ms-transform: translateY(0);
    -webkit-transform: translateY(0);
    -moz-transform: translateY(0);
    transform: translateY(0);
@@ -242,7 +126,11 @@ body {
 .caption__overlay__title {
    margin: 0;
    padding: 0 0 12px;
+   -ms-transform: translateY( calc(-100% - 10px) ); /* +10px overlay padding */
+   -o-transform: translateY( calc(-100% - 10px) ); /* +10px overlay padding */
    -webkit-transform: translateY( calc(-100% - 10px) ); /* +10px overlay padding */
+   -ms-transition: transform .35s ease-out;
+   -o-transition: transform .35s ease-out;
    -webkit-transition: transform .35s ease-out;
    -moz-transform: translateY( calc(-100% - 10px) ); /* +10px overlay padding */
    -moz-transition: transform .35s ease-out;
@@ -250,6 +138,8 @@ body {
     transition: transform .35s ease-out;
 }
 .caption:hover .caption__overlay__title {
+   -o-transform: translateY(0);
+   -ms-transform: translateY(0);
    -webkit-transform: translateY(0);
    -moz-transform: translateY(0);
    transform: translateY(0);
@@ -263,47 +153,19 @@ body {
    bottom: 0;
    left: 0;
    background: transparent;
+   -ms-transition: background .35s ease-out;
+   -o-transition: background .35s ease-out;
    -webkit-transition: background .35s ease-out;
    -moz-transition: background .35s ease-out;
    transition: background .35s ease-out;
 }
 .caption:hover::before {
-    background: rgba(0, 0, 0, .5);
+   background: rgb(0, 0, 0);
+   background: rgba(0, 0, 0, .5);
 }
 
-
-/*
- * Affix and center
- */
-
-@media (min-width: 768px) {
-  /* Pull out the header and footer */
-  .masthead {
-    position: fixed;
-    top: 0;
-  }
-  .mastfoot {
-    position: fixed;
-    bottom: 0;
-  }
-  /* Start the vertical centering */
-  .site-wrapper-inner {
-    vertical-align: middle;
-  }
-  /* Handle the widths */
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 100%; /* Must be percentage or pixels for horizontal alignment */
-  }
-}
 
 @media (min-width: 992px) {
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 700px;
-  }
   .img-responsive {
      min-height: 460px;
   }
