--- a/layouts/page/single.html
+++ b/layouts/page/single.html
@@ -1,26 +1,27 @@
 {{ partial "header.html" . }}
+{{ partial "content-header.html" . }}
 
-<div id="layout" class="pure-g">
-
-  <div class="content pure-u-1 pure-u-md-3-4">
-    <div>
-      <section class="post">
-        <h1 class="content-subhead">{{ .Date.Format "02 Jan 2006, 15:04" }}</h1>
-        <header class="post-header">
-          <a href="{{ .Permalink }}" class="post-title">{{ .Title }}</a>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-18 col-md-12">
+      <div class="media">
+        <a class="media-left" href="#">
+          <img class="img-responsive" src="{{ .Params.thumbnail }}" alt="About me">
+        </a>
+        <div class="media-body">
+          <h1 class="media-heading"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
+          <p>{{ .Date.Format "02 Jan 2006, 15:04" }}</p>
+          {{ .Content }}
           <p class="post-meta">
             {{ if isset .Params "categories" }}
             {{ range .Params.categories }}<a class="post-category post-category-{{ . }}" href="/categories/{{ . | urlize }}.html">{{ . }}</a>{{ end }}
             {{ end }}
           </p>
-        </header>
-        <div class="post-description">
-          {{ .Content }}
         </div>
-      </section>
-      {{ partial "footer.html" . }}
+      </div>
     </div>
   </div>
 </div>
 
+{{ partial "footer.html" . }}
 {{ partial "end.html" . }}
