--- a/layouts/partials/end.html
+++ b/layouts/partials/end.html
@@ -1,25 +1,5 @@
-<script>
-  // https://developers.google.com/speed/docs/insights/OptimizeCSSDelivery
-  var cb = function() {
-    var styles = [
-      "//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,300,800&subset=latin,latin-ext"
-    ]
-    var h = document.getElementsByTagName('head')[0];
-    for (var i=0;i<styles.length;i++) {
-      var l = document.createElement('link'); l.rel = 'stylesheet';
-      l.href = styles[i];
-      h.appendChild(l);
-    }
-  };
-
-  var raf = requestAnimationFrame || mozRequestAnimationFrame ||
-      webkitRequestAnimationFrame || msRequestAnimationFrame;
-  if (raf) raf(cb);
-  else window.addEventListener('load', cb);
-
-</script>
 <script src="https://www.janalonzo.com/js/picturefill.min.js" defer async></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://www.janalonzo.com/js/jquery.min.js"></script>
 <script src="https://www.janalonzo.com/js/bootstrap.min.js" defer async></script>
 </body>
 </html>
