--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,6 +5,7 @@
 {{ else }}
 <head itemscope itemtype="http://schema.org/Person">
 {{ end }}
+  <meta http-equiv="" content="default-src 'none'; script-src 'self' www.google-analytics.com; connect-src 'self'; img-src 'self'; style-src 'self' fonts.googleapis.com; font-src 'self';">
   <meta charset="utf-8">
 
   {{ partial "meta.html" . }}
@@ -15,22 +16,14 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-  <link rel="dns-prefetch" href="//www.janalonzo.com"/>
-  <link rel="icon" type="image/ico" href="http://www.janalonzo.com/assets/favicon.ico"/>
+  <link rel="dns-prefetch" href="https://www.janalonzo.com"/>
+  <link rel="next" href="https://www.janalonzo.com/photos.html"/>
+  <link rel="icon" type="image/ico" href="https://www.janalonzo.com/assets/favicon.ico"/>
   <link rel="canonical" href="{{ .Permalink }}">
   {{ if .RSSlink }}<link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />{{ end }}
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-594998-17', 'auto');
-    ga('send', 'pageview');
-  </script>
-  <link rel="stylesheet" href="/css/font-awesome.min.css"/>
-  <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="/css/bootstrap-theme.min.css"/>
-  <link rel="stylesheet" href="/css/site.min.css"/>
+  <script src="https://www.janalonzo.com/js/ga.min.js"></script>
+  <link rel="stylesheet" href="//www.janalonzo.com/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="//www.janalonzo.com/css/bootstrap-theme.min.css"/>
+  <link rel="stylesheet" href="//www.janalonzo.com/css/site.min.css"/>
 </head>
 <body>
