--- a/layouts/partials/end-photos-single.html
+++ b/layouts/partials/end-photos-single.html
@@ -1,7 +1,8 @@
-<script src="https://www.janalonzo.com/js/picturefill.min.js" defer async></script>
-<script src="https://www.janalonzo.com/js/jquery.min.js"></script>
-<script src="https://www.janalonzo.com/js/bootstrap.min.js" defer async></script>
-<script src="https://www.janalonzo.com/js/styles.min.js" defer async></script>
-<script src="https://www.janalonzo.com/js/site.min.js" defer async></script>
+{{ $baseurl := .Site.BaseUrl }}
+<script src="{{ $baseurl }}/js/picturefill.min.js" defer async></script>
+<script src="{{ $baseurl }}/js/jquery.min.js"></script>
+<script src="{{ $baseurl }}/js/bootstrap.min.js" defer async></script>
+<script src="{{ $baseurl }}/js/styles.min.js" defer async></script>
+<script src="{{ $baseurl }}/js/site.min.js" defer async></script>
 </body>
 </html>
