--- a/layouts/partials/end.html
+++ b/layouts/partials/end.html
@@ -1,5 +1,6 @@
-<script src="https://www.janalonzo.com/js/picturefill.min.js" defer async></script>
-<script src="https://www.janalonzo.com/js/jquery.min.js"></script>
-<script src="https://www.janalonzo.com/js/bootstrap.min.js" defer async></script>
+{{ $baseurl := .Site.BaseUrl }}
+<script src="{{ $baseurl }}/js/picturefill.min.js" defer async></script>
+<script src="{{ $baseurl }}/js/jquery.min.js"></script>
+<script src="{{ $baseurl }}/js/bootstrap.min.js" defer async></script>
 </body>
 </html>
