--- a/layouts/partials/header-blog.html
+++ b/layouts/partials/header-blog.html
@@ -25,7 +25,7 @@
   <script src="{{ $baseurl }}/js/ga.min.js"></script>
   <link rel="stylesheet" href="{{ $baseurl }}/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="{{ $baseurl }}/css/bootstrap-theme.min.css"/>
-  <link rel="stylesheet" href="{{ $baseurl }}/css/cover.min.css"/>
-  <link rel="stylesheet" href="{{ $baseurl }}/css/site.min.css"/>
+  <link rel="stylesheet" href="{{ $baseurl }}/css/blog.min.css"/>
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Cantarell|Rokkitt">
 </head>
 <body>
