--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -49,10 +49,14 @@ body {
    text-transform: capitalize;
 }
 
-.footer p {
+.footer {
    color: #999;
    opacity: 0.8;
    font-size: 0.8em;
+   width: 100%;
+   margin-left: auto;
+   margin-right: auto;
+   text-align: center;
 }
 
 .panel, .modal {
