--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,4 @@
+{{ $baseurl := .Site.BaseUrl }}
 <!doctype html>
 <html lang="en-US" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
 {{ if isset .Params "thumbnail" }}
@@ -16,14 +17,14 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-  <link rel="dns-prefetch" href="https://www.janalonzo.com"/>
-  <link rel="next" href="https://www.janalonzo.com/photos.html"/>
-  <link rel="icon" type="image/ico" href="https://www.janalonzo.com/assets/favicon.ico"/>
+  <link rel="dns-prefetch" href="{{ $baseurl }}"/>
+  <link rel="next" href="{{ $baseurl }}/photos.html"/>
+  <link rel="icon" type="image/ico" href="{{ $baseurl }}/assets/favicon.ico"/>
   <link rel="canonical" href="{{ .Permalink }}">
   {{ if .RSSlink }}<link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />{{ end }}
-  <script src="https://www.janalonzo.com/js/ga.min.js"></script>
-  <link rel="stylesheet" href="//www.janalonzo.com/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="//www.janalonzo.com/css/bootstrap-theme.min.css"/>
-  <link rel="stylesheet" href="//www.janalonzo.com/css/site.min.css"/>
+  <script src="{{ $baseurl }}/js/ga.min.js"></script>
+  <link rel="stylesheet" href="{{ $baseurl }}/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="{{ $baseurl }}/css/bootstrap-theme.min.css"/>
+  <link rel="stylesheet" href="{{ $baseurl }}/css/site.min.css"/>
 </head>
 <body>
