--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -1,3 +1,4 @@
+{{ $baseurl := .Site.BaseUrl }}
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -25,8 +26,8 @@
 <meta itemprop="url" content="{{ .Permalink }}"/>
 <meta property="og:url" content="{{ .Permalink }}"/>
 {{ else }}
-<meta property="url" content="https://www.janalonzo.com"/>
-<meta property="og:url" content="https://www.janalonzo.com"/>
+<meta property="url" content="{{ $baseurl }}"/>
+<meta property="og:url" content="{{ $baseurl }}"/>
 {{ end }}
 <meta property="og:locale" content="en_US">
 <meta property="article:published_time" content="{{ .Date.Format "2006-01-02" }}"/>
@@ -44,7 +45,7 @@
 <meta name="twitter:image" content="{{ .Params.thumbnail }}">
 {{ else }}
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="https://www.janalonzo.com/assets/profile.png">
+<meta name="twitter:image" content="{{ $baseurl }}/assets/profile.png">
 {{ end }}
 <meta name="twitter:site" content="@jmalonzo">
 <meta name="twitter:title" content="{{ .Title }}">
