--- a/layouts/partials/header-blog.html
+++ b/layouts/partials/header-blog.html
@@ -26,6 +26,6 @@
   <link rel="stylesheet" href="{{ $baseurl }}/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="{{ $baseurl }}/css/bootstrap-theme.min.css"/>
   <link rel="stylesheet" href="{{ $baseurl }}/css/blog.min.css"/>
-  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Cantarell|Rokkitt">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Vollkorn|Rokkitt">
 </head>
 <body>
