Restyle blog ala medium. Initial updates.

--- a/layouts/partials/header-blog.html
+++ b/layouts/partials/header-blog.html
@@ -29,3 +29,12 @@
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Vollkorn|Rokkitt">
 </head>
 <body>
+    <div class="blog-masthead">
+      <div class="container">
+        <nav class="blog-nav">
+          <a class="blog-nav-item" href="/index.html">Cover</a>
+          <a class="blog-nav-item active" href="/post.html">Blog</a>
+          <a class="blog-nav-item" href="/photos.html">Photography</a>
+        </nav>
+      </div>
+    </div>
