--- a/layouts/section/post.html
+++ b/layouts/section/post.html
@@ -1,15 +1,5 @@
 {{ partial "header-blog.html" . }}
 
-    <div class="blog-masthead">
-      <div class="container">
-        <nav class="blog-nav">
-          <a class="blog-nav-item" href="/index.html">Cover</a>
-          <a class="blog-nav-item active" href="/post.html">Blog</a>
-          <a class="blog-nav-item" href="/photos.html">Photography</a>
-        </nav>
-      </div>
-    </div>
-
 <div class="container">
 
   <div class="blog-header">
@@ -41,7 +31,7 @@
 
     <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
       <div class="sidebar-module sidebar-module-inset">
-        <h4>About</h4>
+        <h4>about</h4>
         <p>Jan is a senior developer at Taguchi. Sometimes he takes pictures. Views here are his own and not of his employer's.</p>
       </div>
     </div><!-- /.blog-sidebar -->
