--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -4,8 +4,15 @@
 
 body {
    background-color: #fff;
-   font-family: Vollkorn, Georgia, Cambria "Times New Roman", Times, serif;
-   color: rgba(85, 85, 85, 0.9);
+   font-family: "Roboto Slab", Georgia, Cambria "Times New Roman", Times, serif;
+   color: rgb(35, 35, 35);
+   color: rgba(35, 35, 35, 0.8);
+}
+
+a, a:hover, a:active {
+   color: rgb(0,0,0);
+   color: rgba(0,0,0,0.8);
+   text-decoration: none;
 }
 
 h1, .h1,
@@ -15,11 +22,13 @@ h4, .h4,
 h5, .h5,
 h6, .h6 {
    margin-top: 0;
-   font-family: Rokkitt, "Helvetica Neue", Helvetica, Arial, sans-serif;
-   font-weight: normal;
+   font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
+   font-weight: 700; 
    color: #333; /* #ddd;*/
+   font-size: 32px;
+   letter-spacing: -0.04em;
+   margin-bottom: 8px;
 }
-
 
 /*
  * Override Bootstrap's default container.
@@ -37,29 +46,33 @@ h6, .h6 {
  */
 
 .blog-masthead {
-   background-color:  #428bca;
+   background-color: rgba(255,255,255,0.6); /* #428bca*/
    opacity: 0.8;
-  -webkit-box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
-          box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
+   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+   -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+   box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+   
 }
 
 /* Nav links */
 .blog-nav-item {
-  position: relative;
-  display: inline-block;
-  padding: 10px;
-  font-weight: 500;
-  color: rgba(205, 221, 235, 1); /* #cdddeb;*/
+   position: relative;
+   display: inline-block;
+   padding: 10px;
+   font-weight: 400;
+   font-size: 16px;
+   color: rgba(0, 0, 0, 0.8);
+   letter-spacing: 0.1em;
 }
 .blog-nav-item:hover,
 .blog-nav-item:focus {
-  color: rgba(255, 255, 255, 1); /* #fff;*/
+  color: rgb(66,139,202, 0.8);
   text-decoration: none;
 }
 
 /* Active state gets a caret at the bottom */
 .blog-nav .active {
-  color: rgba(255, 255, 255, 1); /* #fff;*/
+  color: rgb(66,139,202, 0.8);
 }
 .blog-nav .active:after {
   position: absolute;
@@ -81,18 +94,20 @@ h6, .h6 {
  */
 
 .blog-header {
-  padding-top: 20px;
-  padding-bottom: 20px;
+   padding-top: 20px;
+   padding-bottom: 20px;
 }
 .blog-title {
-  margin-top: 30px;
-  margin-bottom: 0;
-  font-size: 60px;
-  font-weight: normal;
+   margin-top: 30px;
+   margin-bottom: 0;
+   font-size: 52px;
+   font-weight: 700;
+   letter-spacing: -0.04em;
+   color: rgba(0,0,0,0.8)
 }
 .blog-description {
-  font-size: 20px;
-  color: #999;
+   font-size: 20px;
+   color: rgba(51,51,51,.7);
 }
 
 
@@ -106,13 +121,25 @@ h6, .h6 {
 }
 
 /* Sidebar modules for boxing content */
+.blog-sidebar {
+   background-color: #fafafa;
+   color: rgba(0,0,0,0.44);
+}
+
+.blog-sidebar a {
+   color: rgba(0,0,0,0.44);
+}
+
+.blog-sidebar h3, .blog-sidebar h4 {
+   font-weight: 400;
+}
+
 .sidebar-module {
   padding: 15px;
   margin: 0 -15px 15px;
 }
 .sidebar-module-inset {
   padding: 15px;
-  background-color: #f5f5f5;
   border-radius: 4px;
 }
 .sidebar-module-inset p:last-child,
@@ -144,11 +171,11 @@ h6, .h6 {
 }
 .blog-post-title {
   margin-bottom: 5px;
-  font-size: 40px;
+  font-size: 48px;
 }
 .blog-post-meta {
-  margin-bottom: 20px;
-  color: #999;
+   margin-bottom: 20px;
+   color: rgba(51,51,51,.7);
 }
 
 
@@ -157,11 +184,11 @@ h6, .h6 {
  */
 
 .footer {
-  padding: 40px 0;
-  color: #999;
-  text-align: center;
-  background-color: #f9f9f9;
-  border-top: 1px solid #e5e5e5;
+   padding: 40px 0;
+   color: rgba(51,51,51,.7);
+   text-align: center;
+   background-color: #f9f9f9;
+   border-top: 1px solid #e5e5e5;
 }
 .footer p:last-child {
   margin-bottom: 0;
