--- a/layouts/partials/end.html
+++ b/layouts/partials/end.html
@@ -2,5 +2,6 @@
 <script src="{{ $baseurl }}/js/picturefill.min.js" defer async></script>
 <script src="{{ $baseurl }}/js/jquery.min.js"></script>
 <script src="{{ $baseurl }}/js/bootstrap.min.js" defer async></script>
+<script src="{{ $baseurl }}/js/styles.min.js" defer async></script>
 </body>
 </html>
