--- a/layouts/partials/content-header.html
+++ b/layouts/partials/content-header.html
@@ -8,30 +8,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <span class="navbar-brand">Jan Michael Alonzo</span>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/post.html">Blog</a></li>
-        <li><a href="/photos.html">Photography</a></li>
+        <li><a href="/index.html">Cover</a></li>
+        <li><a href="/post.html">Notes</a></li>
+        <li><a href="/photos.html">Images</a></li>
       </ul>
-      {{ if .Title }}
-      <ul class="nav navbar-nav navbar-right">
-        <li>
-          <p class="navbar-text">
-            <span><strong>{{ .Title }}</strong></name>
-            {{ if isset .Params "categories" }}
-            &middot;
-            {{ range .Params.categories }}
-            <a class="label label-primary post-category post-category-{{ . }}" href="/categories/{{ . | urlize }}.html">#{{ . }}</a>
-            {{ end }}{{ end }}
-          </p>
-        </li>
-      </ul>
-      {{ end }}
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
