--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -11,65 +11,105 @@ body {
 
 .navbar-inverse {
    background-image: none;
-   background-color: rgb(21, 21, 21);
-   background-color: rgba(21, 21, 21, 0.8);
+   background-color: rgb(41, 41, 41);
+   background-color: rgba(41, 41, 41, 0.8);
 }
-
-.photo-title {
-   text-decoration: none;
-   color: #fff;
-   font-size: 1.2em;
-   text-transform: capitalize;
-}
-
-.photo-date {
-   font-size: 0.8em;
-}
-
-.post-category {
-   margin: 0 0.1em;
-   padding: 0.3em 0.3em;
-   color: rgb(51,51,51);
-   color: rgba(51,51,51,.7);
-}
-
 
 .footer, .footer a {
    font-family: "Open Sans", serif;
    color: rgb(204,204,204);
    color: rgba(204,204,204,.8);
-   font-size: 0.7em;
+   font-size: 0.9em;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
 }
 
-.panel, .modal {
-   text-align: left;
-   color: rgb(0,0,0);
-   color: rgba(0,0,0,0.8);
-   text-shadow: none;
-}
-
 .photoset {
+   width: 100%;
    display: -webkit-flex;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
-   align-items: flex-start;
-   width: 100%;
+   align-items: stretch;
+   justify-content: center;
 }
 
-.photoset--item img{
-   width: 256px;
+.photoset__item img {
+   width: 312px;
    height: auto;
-   margin: 0.8em;
 }
 
-.photoset li {
+.photoset__item {
+   display: -webkit-flex;
+   display: flex;
+   position: relative;
+   margin: 10px;
+   list-style-type: none;
+}
+
+.photoset__item--single {
+   display: -webkit-flex;
+   display: flex;
+   flex-wrap: nowrap;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+}
+
+.photoset__item--overlay {
    display: -webkit-flex;
    display: flex;
    flex-wrap: wrap;
-   list-style-type: none;
+   flex-direction: column;
+   justify-content: flex-end;
+   align-items: stretch;
+   width: 100%;
+   height: 100%;
+   position: absolute;
+   top: 0; left: 0;
+   /** */
+   color: rgb(255,255,255);
+   color: rgba(255,255,255,0.8);
+   font-size: 0.8em;
+   text-transform: capitalize;
+   /** */
+   background: rgb(21, 21, 21);
+   background: rgba(21, 21, 21, 0.9);
+   text-align: center;
+   opacity: 0;
+   -webkit-transition: opacity .25s ease;
+   -moz-transition: opacity .25s ease;
+   -o-transition: opacity .25s ease;
+   transition: opacity .25s ease;
+}
+
+.photoset a, .photoset a:active, .photoset a:hover {
+   color: rgb(255,255,255);
+   color: rgba(255,255,255,0.8);
+   text-decoration: none;
+}
+
+.photoset__item:hover .photoset__item--overlay {
+   opacity: 1;
+}
+
+/* http://css-tricks.com/snippets/css/media-queries-for-standard-devices/ */
+/* Smartphones (portrait) ----------- */
+@media only screen and (max-width : 320px) {
+   .photoset {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+   }
+}
+
+/* Smartphones (landscape) ----------- */
+@media only screen and (min-width : 321px) {
+   .photoset {
+      -webkit-flex: 1 0 100px;
+      -ms-flex: 1 0 100px;
+      flex: 1 0 100px;
+   }
 }
