--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,29 +1,25 @@
 {{ partial "header.html" . }}
 {{ partial "content-header.html" . }}
-
-<div class="container-fluid">
-  <div class="row">
-    {{ range .Data.Pages }}
-    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-      <div class="caption">
-        {{ .Content }}
-        <div class="caption__overlay">
-          <h2 class="caption__overlay__title"><a class="photo-title" href="{{ .Permalink }}">{{ .Title }}</a></h2>
-          <p class="caption__overlay__content">
-            <span class="photo-date">
-              {{ .Date.Format "02 Jan 2006, 15:04" }} &middot;
-            </span>
-            {{ if isset .Params "categories" }}
-            {{ range .Params.categories }}
-            <a class="post-category post-category-{{ . }}" href="/categories/{{ . | urlize }}.html">#{{ . }}</a>
-            {{ end }}{{ end }}
-          </p>
-        </div>
-      </div>
+<ul class="photoset">
+  {{ range .Data.Pages }}
+  <li class="photoset__item" itemscope itemtype="http://schema.org/Photograph">
+    {{ .Content }}
+    <div class="photoset__item--overlay">
+      <h4>
+        <a href="{{ .Permalink }}">{{ .Title }}</a>
+      </h4>
+      <p>
+        {{ .Date.Format "02 Jan 2006, 15:04" }}
+      </p>
+      <p>
+        {{ if isset .Params "categories" }}
+        {{ range .Params.categories }}
+        <a class="post-category post-category-{{ . }}" href="/categories/{{ . | urlize }}.html">{{ . }}</a>
+        {{ end }}{{ end }}
+      </p>
     </div>
-    {{ end }}
-  </div>
-</div>
-
+  </li>
+  {{ end }}
+</ul>
 {{ partial "footer.html" . }}
 {{ partial "end.html" . }}
